// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformCss > case0 1`] = `
{
  ".alert": {
    "&-primary": {
      "css": {
        "color": "red",
      },
    },
    "&.alert-hover": {
      "&:hover": {
        "css": {
          "color": "blue",
        },
      },
    },
    "css": {
      "display": "grid",
      "width": "100%",
    },
  },
  "@media (min-width: 640px)": {
    ".alert": {
      "css": {
        "grid-auto-flow": "column",
        "grid-template-columns": "auto minmax(auto,1fr)",
        "justify-items": "start",
        "text-align": "left",
      },
    },
  },
}
`;

exports[`transformCss > case1 1`] = `
{
  ".alert": {
    "&-primary": {
      "apply": [
        "text-sm bg-red-200",
      ],
      "css": {
        "color": "red",
      },
    },
    "&.alert-hover": {
      "&:hover": {
        "apply": [
          "text-md",
        ],
        "css": {
          "color": "blue",
        },
      },
    },
    "apply": [
      "text-xs",
    ],
    "css": {
      "display": "grid",
      "width": "100%",
    },
  },
}
`;

exports[`transformCss > case2 1`] = `
{
  ".alert": {
    "apply": [
      "text-xs",
      "bg-primary text-primary-content [@media(hover:hover)]:hover:text-primary-content",
    ],
    "css": {
      "display": "grid",
      "width": "100%",
    },
  },
}
`;

exports[`transformCss > case3 1`] = `
{
  ".alert": {
    "apply": [
      "text-xs !important",
      "bg-primary text-primary-content [@media(hover:hover)]:hover:text-primary-content",
    ],
    "css": {
      "display": "grid !important",
      "width": "100%",
    },
  },
}
`;

exports[`transformCss > merge case 0 1`] = `
{
  ".xxx": {
    "apply": [
      "relative inline-grid h-[var(--size)] w-[var(--size)] place-content-center rounded-full bg-transparent",
    ],
    "css": {
      "--size": "5rem",
      "--thickness": "calc(var(--size) / 10)",
      "--value": "0",
      "box-sizing": "content-box",
      "vertical-align": "middle",
    },
  },
  ".xxx::-moz-progress-bar": {
    "apply": [
      "appearance-none bg-transparent",
    ],
  },
  ".xxx::-webkit-progress-bar": {
    "apply": [
      "appearance-none bg-transparent",
    ],
  },
  ".xxx::-webkit-progress-value": {
    "apply": [
      "appearance-none bg-transparent",
    ],
  },
  ".xxx:after": {
    "apply": [
      "bg-current",
    ],
    "css": {
      "inset": "calc(50% - var(--thickness) / 2)",
      "transform": "rotate(calc(var(--value) * 3.6deg - 90deg)) translate(calc(var(--size) / 2 - 50%))",
    },
  },
  ".xxx:before": {
    "apply": [
      "inset-0",
    ],
    "css": {
      "-webkit-mask": "radial-gradient(
        farthest-side,
        #0000 calc(99% - var(--thickness)),
        #000 calc(100% - var(--thickness))
      )",
      "background": "radial-gradient(farthest-side, currentColor 98%, #0000) top/var(--thickness) var(--thickness)
          no-repeat,
        conic-gradient(currentColor calc(var(--value) * 1%), #0000 0)",
      "mask": "radial-gradient(
        farthest-side,
        #0000 calc(99% - var(--thickness)),
        #000 calc(100% - var(--thickness))
      )",
    },
  },
  ".xxx:before,.xxx:after": {
    "apply": [
      "absolute rounded-full",
    ],
    "css": {
      "content": """",
    },
  },
}
`;

exports[`transformCss > merge case 1 1`] = `
{
  ".xxx": {
    "apply": [
      "bg-red-100",
      "relative inline-grid h-[var(--size)] w-[var(--size)] place-content-center rounded-full bg-transparent",
    ],
    "css": {
      "--size": "5rem",
      "--thickness": "calc(var(--size) / 10)",
      "--value": "0",
      "box-sizing": "content-box",
      "vertical-align": "middle",
    },
  },
}
`;
